syntax = "proto3";

option go_package = "github.com/souravbiswassanto/path-pulse-iot-backend/protogen/golang/iot/group";

import "iot/user/user.proto";
import "google/api/annotations.proto";

message GroupId {
  uint64 g_id = 1;
}
message Group {
  uint64 g_id = 1;
  string name = 2;
  repeated UserID members = 3;
}

message UserAdd {
  uint64 userId = 1;
  uint64 groupId = 2;
}

service GroupManager {
  rpc CreateGroup(Group) returns (Empty) {
    option (google.api.http) = {
      post: "/v1/group"
      body: "*"
    };
  }
  rpc UpdateGroup(Group) returns (Empty) {
    option (google.api.http) = {
      put: "/v1/group/{g_id}"
      body: "*"
    };
  }
  rpc DeleteGroup(GroupId) returns (Empty) {
    option (google.api.http) = {
      delete: "/v1/group/{g_id}"
    };
  }
  rpc GetGroup(GroupId) returns (Group) {
    option (google.api.http) = {
      get: "/v1/group/{g_id}"
    };
  }
  rpc AddUserToGroup(UserAdd) returns (Empty) {
    option (google.api.http) = {
      post: "/v1/group/{groupId}/user/{userId}"
    };
  }
}